feat(community): revamp community feed, add poll, reddit upvote/downvote, db saved posts